improved domain and user handling

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,6 +1,7 @@
 // import bootstrap variables & mixins
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
+@import "sprite.less";
 
 // import customized variables & mixins
 @import "variables.less";
