--- a/app/style/style.css
+++ b/app/style/style.css
@@ -25,6 +25,19 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.sprite {
+  background: url('../images/sprite.png') no-repeat;
+}
+.sprite.icon-remove {
+  width: 26px;
+  height: 26px;
+  background-position: 0px 0px;
+}
+.sprite.icon-edit {
+  width: 24px;
+  height: 21px;
+  background-position: -26px 0px;
+}
 article,
 aside,
 details,
