feat(update bootstrap): update to v3.0.0 of twitter bootstrap <3

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -10,4 +10,10 @@
 // import bootstrap files
 @import "bootstrap.less";
 
+body { padding-top: 70px; }
+
+a .glyphicon {
+  color: @text-color;
+}
+
 // import customized files
