--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,7 +1,3 @@
-@iconSpritePath:          "../images/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../images/glyphicons-halflings-white.png";
-
-
-@sansFontFamily:        Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
-@monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
+@font-family-sans-serif:  Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+@font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
